--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "bot_info": {
     "name": "Easy_uknowbot",
     "username": "@Easy_uknowbot",
-    "token": "YOUR_BOT_TOKEN_HERE",
+    "token": "8327175937:AAGoWZPlDM_UX7efZv6_7vJMHDsrZ3-EyIA",
     "version": "1.0.0"
   },
   "platforms": {
