--- a/config.example.json
+++ b/config.example.json
@@ -2,7 +2,7 @@
   "bot_info": {
     "name": "Your_Bot_Name",
     "username": "@Your_Bot_Username",
-    "token": "YOUR_BOT_TOKEN_HERE",
+    "token": "8327175937:AAGoWZPlDM_UX7efZv6_7vJMHDsrZ3-EyIA",
     "version": "1.0.0"
   },
   "platforms": {
