--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "bot_info": {
-    "name": "Easy_uknowbot",
-    "username": "@Easy_uknowbot",
-    "token": "8327175937:AAGoWZPlDM_UX7efZv6_7vJMHDsrZ3-EyIA",
+    "name": "Product_tg",
+    "username": "@Final_output_formatbot",
+    "token": "8414049375:AAFMPUvB2u5KffNPsaAi3xu_DOiy-7dhHIg",
     "version": "1.0.0"
   },
   "platforms": {
